@startuml ContextOS_ER_Diagram
!define ENTITY entity

skinparam backgroundColor #f8f9fa
skinparam linetype ortho

title ContextOS Entity Relationship Diagram

ENTITY "users" as users {
  + id: UUID [PK]
  --
  email: VARCHAR(255) [UQ]
  password_hash: VARCHAR(255)
  display_name: VARCHAR(100)
  avatar_url: VARCHAR(500)
  email_verified: BOOLEAN
  mfa_enabled: BOOLEAN
  role: VARCHAR(20)
  settings: JSONB
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

ENTITY "containers" as containers {
  + id: UUID [PK]
  --
  # owner_id: UUID [FK]
  type: VARCHAR(50)
  title: VARCHAR(500)
  description: TEXT
  status: VARCHAR(20)
  progress_percentage: INTEGER
  progress_data: JSONB
  metadata: JSONB
  # ai_context_id: UUID [FK]
  embedding: VECTOR(768)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
  deleted_at: TIMESTAMPTZ
}

ENTITY "tags" as tags {
  + id: UUID [PK]
  --
  # owner_id: UUID [FK]
  name: VARCHAR(100)
  color: VARCHAR(7)
  created_at: TIMESTAMPTZ
  [UQ: owner_id, name]
}

ENTITY "container_tags" as container_tags {
  # container_id: UUID [FK]
  # tag_id: UUID [FK]
  assigned_at: TIMESTAMPTZ
  [PK: container_id, tag_id]
}

ENTITY "timeline_events" as timeline_events {
  + id: UUID [PK]
  --
  # container_id: UUID [FK]
  event_type: VARCHAR(50)
  description: TEXT
  old_value: TEXT
  new_value: TEXT
  metadata: JSONB
  created_at: TIMESTAMPTZ
}

ENTITY "snapshots" as snapshots {
  + id: UUID [PK]
  --
  # container_id: UUID [FK]
  label: VARCHAR(200)
  snapshot_data: JSONB
  metadata: JSONB
  version: INTEGER
  created_at: TIMESTAMPTZ
  [UQ: container_id, version]
}

ENTITY "pins" as pins {
  + id: UUID [PK]
  --
  # owner_id: UUID [FK]
  # container_id: UUID [FK]
  pinned_at: TIMESTAMPTZ
  [UQ: owner_id, container_id]
}

ENTITY "ai_contexts" as ai_contexts {
  + id: UUID [PK]
  --
  # container_id: UUID [FK, UQ]
  summary: TEXT
  auto_tags: TEXT[]
  auto_tag_scores: FLOAT[]
  entities: JSONB
  relationships: JSONB
  enrichment_status: VARCHAR(20)
  last_enriched_at: TIMESTAMPTZ
  created_at: TIMESTAMPTZ
}

ENTITY "knowledge_nodes" as knowledge_nodes {
  + id: UUID [PK]
  --
  # owner_id: UUID [FK]
  label: VARCHAR(255)
  type: VARCHAR(50)
  # source_container_id: UUID [FK]
  metadata: JSONB
  created_at: TIMESTAMPTZ
}

ENTITY "knowledge_edges" as knowledge_edges {
  + id: UUID [PK]
  --
  # source_node_id: UUID [FK]
  # target_node_id: UUID [FK]
  relationship_type: VARCHAR(100)
  weight: FLOAT
  created_at: TIMESTAMPTZ
  [UQ: source_node_id, target_node_id, relationship_type]
}

users ||---o{ containers : "owns"
users ||---o{ tags : "owns"
users ||---o{ pins : "owns"
users ||---o{ knowledge_nodes : "owns"

containers ||--o{ timeline_events : "has"
containers ||--o{ snapshots : "has"
containers ||--o| ai_contexts : "has AI context"
containers ||--o{ container_tags : "tagged with"
containers ||--o{ pins : "pinned by"
containers ||--o{ knowledge_nodes : "source"

tags ||--o{ container_tags : "used in"

knowledge_nodes ||--o{ knowledge_edges : "source"
knowledge_nodes ||--o{ knowledge_edges : "target"

@enduml
